added single city entry for styling

--- a/on-the-road.html
+++ b/on-the-road.html
@@ -17,5 +17,11 @@
             Use the the button on the top left of this map to select from one of the four journies described in On the Road.
         </p>
         <iframe class="map" src="https://www.google.com/maps/d/embed?mid=15FtsOqXpygv8ysHMGStQKD9PcXslAhwG"></iframe>
+        <div class="destination">
+            <h3>1: New York City</h3>
+            <p>This is the City where Jack begins in the novel, many times he seeks to escape the dread of the east but he always inevitably returns to the city.</p>
+            <p>Jack himself lived in Ozone park. His mother also lived in New York. As did Neal at some points and Jack’s (then) girlfriend Joan.</p>
+            <p class="quote">“...making me see with my innocent road eyes the absolute madness and fantastic hooray of New York with its millions and millions hustling forever for a buck among themselves...grabbing, taking, giving, sighing, dying, just so they could be buried in those awful cemetery cities beyond Long Island City” - 211 </p>
+        </div>
     </body>
 </html>
