--- a/on-the-road.html
+++ b/on-the-road.html
@@ -10,6 +10,14 @@
             width: 75%;
             height: 70%;
         }
+        .destination {
+            margin-left: auto;
+            margin-right: auto;
+            width: 40%;
+            background-color: 484848;
+            color: white;
+            border-radius: 25px;
+        }
     </style>
     <body>
         <h1>On the Road Summer Reading Map</h1>
