added up though selma

--- a/on-the-road.html
+++ b/on-the-road.html
@@ -30,6 +30,38 @@
             <p>This is the City where Jack begins in the novel, many times he seeks to escape the dread of the east but he always inevitably returns to the city.</p>
             <p>Jack himself lived in Ozone park. His mother also lived in New York. As did Neal at some points and Jack’s (then) girlfriend Joan.</p>
             <p class="quote">“...making me see with my innocent road eyes the absolute madness and fantastic hooray of New York with its millions and millions hustling forever for a buck among themselves...grabbing, taking, giving, sighing, dying, just so they could be buried in those awful cemetery cities beyond Long Island City” - 211 </p>
+            <p class="quote">“[I had] a dream about a strange Arabic figure that was pursuing me across the desert; that I tried to avoid; that finally overtook me just before I reached the Protective City ‘Who is this?’....Something, someone, some spirit was bound to catch us before we reached heaven. Naturally… this is only death: death will overtake us before heaven. The one thing that we yearn for in our living days, that makes us sigh and groan and undergo sweet nauseous of all kinds, is the sweet remembrance of some lost bliss that was probably experienced in the woub and can only be reproduced in death. I told Neal and he instantly recognized it as the mere simple longing for pure death...” - 225</p>
+        </div>
+        <div class="destination">
+            <h3>2: Denver</h3>
+            <p>Early in the novel, Denver seems to be a large part of Jack’s image of ‘the West’. In Book 1, he hitchhikes there to see his friends who have already traveled there, Neal Cassidy and Allen Ginsburg, who he seems to look up to somewhat.</p>
+            <p>Book 3 starts with Jack in Denver, prepared to move his family to a home near the city, which may represent a sense of potential stability and settling down for Jack, as he is unsatisfied with New York, but these plans fall through and he begins travelling with Neal again. After going west to San francisco to pick him up, they come back through Denver on their way east and continue via a travel bureau car.</p>
+            <p>Jack and Neal also pass through as they changed direction from west to south on their journey to Mexico in Book 4. Neal is forced to make a tough departure from his aging father here.</p>
+            <p class="quote">“In a minute just ahead over the rolling wheatfields all golden beneath the destined snows of Estes I’d be seeing old Denver at last. I pictured myself in a Denver bar that night, with all the gang, and in their eyes I would be strange and ragged and like the Prophet that has walked across the land to bring the dark Word, and the only Word I had was Wow.” - 138</p>
+            <p class="quote">“Here I made an attempt to settle down those I love…. I believed in a sane and sound living…. I was suddenly left with nothing in my hands but a handful of crazy stars….I stood poised on the great western plain and didn’t know what to do. I said to myself ‘Well I might as well go be mad again’ and I made preparations to go get Neal…” - 280-281</p>
+        </div>
+        <div class="destination">
+            <h3>3: San Francisco</h3>
+            <p>In the novel, San Francisco is somewhat romanticized as an ideal bustling city of the west.</p>
+            <p>In Book 1, Jack travels to the city after becoming tired of Denver. He meets up with Henri Cru in Marin City and earns money working as a police guard at some barracks for staging ship workers. Jack is still dissatisfied with this, having many wild nights in the city, and eventually finds himself bored and longing for a girl to love.</p>
+            <p>Jack and Neal conclude the journey they make in Book 2 in San Francisco. Neal goes between Louanne and Carolyn.</p>
+            <p>In Book 3, Jack comes to San Francisco to pick up Neal before heading back east.</p>
+            <p class="quote">"Marin City.... It was, so they say, the only community in America where whites and Negroes lived together voluntarily..." - 162</p>
+            <p class="quote">“‘Oh where is the girl I love?” I thought, and looked everywhere, as I had looked everywhere in the little world below. And before me was the great raw bulge of my American continent; somewhere far across gloomy crazy New York was throwing up its cloud of dust and brown steam. There is something brown and holy about the East; and California is while like washlines and empty-souled---at least that’s what I thought then. I’d learn better later.” - 181</p>
+            <p class="quote">“We wandered around carrying our bundles of rags in the narrow romantic streets. Everybody looked like a broken-down movie extra, a withered starlet; -disenchanted stunt-men, midget auto racers, poignant California characters with their end-of-the-continent sadness, handsome decadent Casanovish men, puffy-eyed motel blondes, hustlers, pimps, whores, masseurs, bellhops, a lemon lot and how’s a man going to make a living with a gang like that.” - 272<p>
+        </div>
+        <div class="destination">
+            <h3>4: Los Angeles</h3>
+            <p>In Book 1, after leaving San Francisco, Jack travels south to Los Angeles. On the bus on the way there, he meets a Mexican girl named Beatrice on the way to Los Angeles. They stay there a few days and tour around before leaving to go to Beatrice’s hometown.</p>
+            <p>Similarly to San Francisco, Los Angeles represents the furthermost point of western-ness, a gathering place for all those with no continent left.</p>
+            <p class="quote">“It was the end of the continent, no more land. Somebody had tipped the American continent like a pinball machine and all the goofballs had come rolling to LA in the southwest corner. I cried for all of us. There was no end to the American sadness and the American madness. Someday we’ll all start laughing and roll on the ground when we realize how funny it’s been.” - 206</p>
+        </div>
+        <div class="destination">
+            <h3>5: Selma</h3>
+            <p>Selma is the hometown of Jack’s girlfriend Beatrice, who he met on the way to Los Angeles from San Francisco in Book 1. After spending some time in LA, the pair goes to stay with ‘Bea’s family in Selma. Jack seems to find the town pleasantly quaint, but there is not enough excitement, and he yearns to return to New York. He eventually does so, leaving Bea behind.</p>
+            <p>Jack himself lived in Ozone park. His mother also lived in New York. As did Neal at some points and Jack’s (then) girlfriend Joan.</p>
+            <p class="quote">“...making me see with my innocent road eyes the absolute madness and fantastic hooray of New York with its millions and millions hustling forever for a buck among themselves...grabbing, taking, giving, sighing, dying, just so they could be buried in those awful cemetery cities beyond Long Island City” - 211 </p>
+            <p class="quote">He also passes through Selma on his way to San Francisco in Book 2.</p>
         </div>
     </body>
 </html>
