added all city writing

--- a/on-the-road.html
+++ b/on-the-road.html
@@ -59,9 +59,48 @@
         <div class="destination">
             <h3>5: Selma</h3>
             <p>Selma is the hometown of Jack’s girlfriend Beatrice, who he met on the way to Los Angeles from San Francisco in Book 1. After spending some time in LA, the pair goes to stay with ‘Bea’s family in Selma. Jack seems to find the town pleasantly quaint, but there is not enough excitement, and he yearns to return to New York. He eventually does so, leaving Bea behind.</p>
-            <p>Jack himself lived in Ozone park. His mother also lived in New York. As did Neal at some points and Jack’s (then) girlfriend Joan.</p>
-            <p class="quote">“...making me see with my innocent road eyes the absolute madness and fantastic hooray of New York with its millions and millions hustling forever for a buck among themselves...grabbing, taking, giving, sighing, dying, just so they could be buried in those awful cemetery cities beyond Long Island City” - 211 </p>
-            <p class="quote">He also passes through Selma on his way to San Francisco in Book 2.</p>
+            <p>He also passes through Selma on his way to San Francisco in Book 2.</p>
+            <p class="quote">“The thought of living in a tent and picking grapes in the cool California mornings hit me right. But there were no jobs to be had and much confusion with everybody giving us innumerable tips and places to go that didn’t materialize a job” - 191</p>
+            <p class="quote">"I made love to her under the tarantula. What was the tarantula doing?" - 201</p>
+        </div>
+        <div class="destination">
+                <h3>6: Harrisburg, Pennsylvania</h3>
+                <p>In Book 1, on Jack’s journey back East, after reaching the last station of his bus trip in Pittsburgh, Jack hitches all the way east to Harrisburg. But he is not able to make it on to New York and is forced to hike back to Pittsburgh. During this time, he is able to somewhat reflect on his journey on the cusp of its end. It is one of the lower points in his journey, and he realizes more about this eastern portion of the country.</p>
+                <p class="quote">“I thought all the wilderness of America was in the West till the Ghost of the Susquehanna showed me different. No, there is a wilderness in the East, it’s the same Wilderness Ben Franklin plodded in the oxcart days when he was postmaster, when George Washington was a wildbuck Indian fighter, when Daniel Boone told stories by Pennsylvania lamps and promised to find the Gap; when Bradford built his road and men whooped her up in log cabins. There were no great Arizona spaces for the little man, just the bushy wilderness of Eastern Pennsylvania, Maryland, and Virginia, the backgrounds, the blacktar roads that curve among the mournful rivers like Susquehana, Monongahela, old Potomac, and Monocacy. This experience shattered me;” - 209-210</p>
+        </div>
+        <div class="destination">
+                <h3>7: Rocky Mount, North Carolina</h3>
+                <p>This is the town where Jack begins in Book 2, spending Christmas with family. At the beginning of Book 2, he travels back and forth between here and New York transporting furniture.</p>
+        </div>
+        <div class="destination">
+                <h3>8: New Orleans</h3>
+                <p>On Neal and Jack’s way to San Francisco in Book 2, they go along the Gulf Coast and the South of the country. They stop in New Orleans to pick up Helen Hinkle and stay with Bill Burroughs for a few days. Jack often contemplates the Mississippi River throughout the novel, including in New Orleans, talking about everything it brings throughout the country all to the Louisiana Delta, including logs from Montana.</p>
+                <p class="quote">“Those bastards have invented plastics by which they could make houses that last FOREVER. Ant tires. Americans are killing themselves by the millions every year with defective rubber tires that get hot on the road and blow up…. Same with clothes. They can make clothes that last forever. They prefer making cheap goods so everybody’ll have to go on working and punching timeclocks and organizing themselves in sullen unions and floundering around while the big grab goes on in Washington and Moscow.” - 250</p>
+        </div>
+        <div class="destination">
+                <h3>9: Fredericksburg, Texas</h3>
+                <p>In the Texas Plains near Fredericksburg, Neal and Jack get their car stuck in the snow and are forced to get out and soak themselves to get it out. Apparently, just then, January 1949 was one of the worst winters in Texas history.</p>
+        </div>
+        <div class="destination">
+                <h3>10: San Antonio</h3>
+                <p>San Antonio was one of the more major cities Jack, Neal, and Frank Shepherds encountered on their way from Denver to Mexico City in Book 4. Here they start noticing some of the cultural shifts as they move South. Neal also went to the hospital for his finger, which he had injured in and got infected in a fight with Louanne.</p>
+                <p class="quote">“We were almost out of America and yet definitely in it and in the middle of where it’s maddest. Hotrods blew by.” - 373</p>
+        </div>
+        <div class="destination">
+            <h3>11: Laredo and Nuevo Laredo</h3>
+            <p>Laredo is the city spanning the Mexican border where Jack, Neal, and Frank crossed into Mexico in Book 4 of the novel. This was an important moment for them as they had seldom or never left the country otherwise, and the sudden cultural difference between the two sides of the same city was stark to them.</p>
+            <p class="quote">“Just across the street Mexico began. We looked with wonder. To our amazement it looked exactly like Mexico. It was three in the morning and fellows in strawhats and white pants were lounging by the dozen against battered pocky storefronts. ‘Look...at...those...cats!’ Whispered Neal.’” - 375</p>
+            <p class="quote">“Behind us lay the whole continent of America and everything Neal and I had previously known about life, and life on the road. We had finally found the magic land at the end of the road and we never dreamed the extent of the magic either.” - 377</p>
+        </div>
+        <div class="destination">
+                <h3>12: Ciudad Victoria</h3>
+                <p>On their way to Mexico City, the trio of Jack, Neal, and Frank pass through and stay in Victoria. Here, they do two main things. First, smoke marijuana with some new friends, where Jack reflects on the language barrier and the observation of other cultures without looking down on them. Then they spend the evening at a whorehouse where they get drunk and lust for young girls (not that that is too much different from what they do regularly). Their time in Victoria feels important as it’s when they first let loose in Mexico and get a real sense of what many of the people there are like.</p>
+                <p class="quote">“Everyone became so high that usual formalities were dispensed with and the things of immediate interest were concentrated on, and what it was now, was the strangeness of Americans and Mexicans blasting together on the desert and more than that, the strangeness of seeing one another up close. So the mexican brothers began talking about us in low voices and commenting, while Neal, Frank, and I commented on them…” - 383</p>
+        </div>
+        <div class="destination">
+                <h3>13: Mexico City</h3>
+                <p>Mexico City is the end of the whole journey for Jack and Neal.They do not stay here forever: Neal was there for the sake of filing quick divorce papers, and Jack also leaves in his own time. Mexico city is the culmination of the experiences they’ve had up to then, seeing the different sorts of people not just between Mexico and America but as how they changed going North to South and East to West.</p>
+                <p class="quote">“We stopped on a ledge where a little thatched hut suspended itself over the precipice of the world….a little three year old Indian girl stood with her finger in her mouth watching us with big brown eyes. ‘She’s probably never seen anybody parked here before in her entire life!’ breathed Neal…. ‘Think of it being born and living on this ledge---this ledge representing all you know of life….notice the beads of sweat on her brow...it’s not the kind of sweat we have, it’s oily and it’s ALWAYS THERE because it’s ALWAYS hpt the year round and she knows nothing of non-sweat, she was born with sweat and dies with sweat.’” - 397</p>
         </div>
     </body>
 </html>
