--- a/on-the-road.html
+++ b/on-the-road.html
@@ -8,7 +8,7 @@
                 </p>
         </div>
         <div class="content">
-                <iframe class="map" src="https://www.google.com/maps/d/embed?mid=15FtsOqXpygv8ysHMGStQKD9PcXslAhwG"></iframe>
+                <iframe id="imap" class="map" src="https://www.google.com/maps/d/embed?mid=15FtsOqXpygv8ysHMGStQKD9PcXslAhwG"></iframe>
                 <div class="destinations">
                         <div class="destination">
                                 <div class="header">New York City</div>
