Added note, fixed typo, and changed styling

--- a/on-the-road.html
+++ b/on-the-road.html
@@ -6,6 +6,7 @@
                 <p>
                         Use the the button on the top left of this map to select from one of the four journies described in On the Road. Major destinations are marked red on the map, click on one to see it's name and number, then you can read about it in the menu on the right.
                 </p>
+                <p>Note: I read 'The Original Scroll' version, so all character names, some place names, and a few scenes are different from how they appear in the standard published version.</p>
         </div>
         <div class="content">
                 <iframe id="imap" class="map" src="https://www.google.com/maps/d/embed?mid=15FtsOqXpygv8ysHMGStQKD9PcXslAhwG"></iframe>
@@ -109,7 +110,7 @@
                                 <div class="destination">
                                         <div class="header">Mexico City</div>
                                         <div class="dest-body">
-                                                <p>Mexico City is the end of the whole journey for Jack and Neal.They do not stay here forever: Neal was there for the sake of filing quick divorce papers, and Jack also leaves in his own time. Mexico city is the culmination of the experiences they’ve had up to then, seeing the different sorts of people not just between Mexico and America but as how they changed going North to South and East to West.</p>
+                                                <p>Mexico City is the end of the whole journey for Jack and Neal. They do not stay here forever: Neal was there for the sake of filing quick divorce papers, and Jack also leaves in his own time. Mexico city is the culmination of the experiences they’ve had up to then, seeing the different sorts of people not just between Mexico and America but as how they changed going North to South and East to West.</p>
                                                 <p class="quote">“We stopped on a ledge where a little thatched hut suspended itself over the precipice of the world….a little three year old Indian girl stood with her finger in her mouth watching us with big brown eyes. ‘She’s probably never seen anybody parked here before in her entire life!’ breathed Neal…. ‘Think of it being born and living on this ledge---this ledge representing all you know of life….notice the beads of sweat on her brow...it’s not the kind of sweat we have, it’s oily and it’s ALWAYS THERE because it’s ALWAYS hpt the year round and she knows nothing of non-sweat, she was born with sweat and dies with sweat.’” - 397</p>
                                         </div>
                                 </div>
