--- a/index.html
+++ b/index.html
@@ -1,10 +1,61 @@
 <html>
-<body>
-    <h2>
-        kholo.moe
-    </h2>
-    <p>
-        Hi, I'm Kholo, this is my personal site, I'm gonna put a photography portfolio and a personal blog up here, and improve the visuals as I go.
-    </p>
-</body>
+<head>
+        <link rel="stylesheet" href="resources/index.css">
+</head>
+        <body>
+                <div class="main">
+                        <div class="asciiArt">
+                                <pre>
+ ____________________________________________________
+/\                                                   \
+\_|  _    _           _                              |
+  | | | _| |__   ___ | | ___   _ __ ___   ___   ___  |
+  | | |/ / '_ \ / _ \| |/ _ \ | '_ ` _ \ / _ \ / _ \ |
+  | |   <| | | | (_) | | (_) || | | | | | (_) |  __/ |
+  | |_|\_\_| |_|\___/|_|\___(_)_| |_| |_|\___/ \___| |
+  |                                                  |
+  |   _______________________________________________|_
+   \_/_________________________________________________/
+                                </pre>
+                        </div>
+
+                        <p>
+Hello, my name is Eliza and welcome to my website. I'd like a place to play around with web things (although this is a static site ATM) and maybe post photography or a small blog here.
+                        </p>
+
+                        <div class="utf8art">
+                                <pre>
+                     _＿＿
+　　　　　　　　　　 /＼二二≧x,,､_　　　　　　　　 　 ＿
+　　　　　　　　　　 |　　寸二二二ﾆ≧x､　 ,-一ー-7　　｀ -､_　　　　　　 ＿＿_,,,
+　　　　　　　　　　 | 　 　 寸ニニニﾌ=ﾏr-|　_jｰｧ　ｊ　 勹　/￣｀ヽ､-=ﾆﾆニニニ|
+　　　　　　　　　　 |　　　　寸ニﾆイ　,　廴ﾄ-～´￣二二ニ-ﾆｚ,_ 　ﾉ寸ﾆ二二二|
+　　　　　　　　　　 | __ヾヽｯ,,∨く___∨'´　　　　, - ﾆー￣＞ヽﾐ､ ｀く,r､ ＼ニニ二|
+　　　　　　　　　　≧z,__ . . ,く￣ ／　　　　／　／　　イ'　　　'　＼　ヽ､ノヘニ二|i
+　　　　　　　　-=爻': : ,, : /___ヽ'　　　　／　／ 　 ／/ 　 　 　 ',ヽ ＼　 ヽｧ ∨ﾆﾉl
+　　　　　　　　　ゞﾐ'",," : L__/　　　　,/　／　　／ /　　／　　　i　',　 ヽ,　∨｀∨ |
+　　　　　　　　　　 冫,,: :/ r/　　　　/　/　　／　/　　/　　　　　}　 i　　 i　 ∨ﾉ≦=-
+　　　　　　　 　 　 彡 /⌒i　 　 　 /　/　　/　 ,/　　/　　　 　 / |　 l 　 │　i勹 ,:.ゞ
+　　　　　 　 　 ＿　|　{　　}　　 　 i　 l 　 /　.,ｲ　／/ 　 　 　 /　|　 }　　 l　 |´ ,,ﾐ:.
+　　　　 　 　 i´　 ｀ヽ,rｰ､/　　 　 i　 l --ーナ|'ﾅｰ/　　　 　 /　 | 　|　　 ﾄ､ |爻ヾ
+　　　　　　　 ヽ 　（⌒ ,メ､ｰ-.、　i　 |　|　 /　l/　/　　　 ﾉ /ー-l,|_ ,!　　 } | |
+　　　　　 　 　 ,＞廴 °r-'　　)　|　 l.l i ,/--ﾉ､ ./　　, ｲ /　 　 i |,ﾊ　 　 i | |
+　 　 　 　 rｰ.iﾞ ｰ- 介ｰバ`-'ﾞ 　 ',　从ｻ芸气z､/ ／ 〃＿,,,,　ﾉ ij ,|　　./ | |
+　　　　　　!　 ｀ー'ﾞ　l 丶.,! . |ﾍ 　 ,∧ zｨ戈::i 　〃 　 　　,ｨﾃﾃ:z､ﾘ/|　 /ノﾘﾉ
+　　　　 　 ゝ- ､　 　 ゝ-' ヽ ﾚム　ヽﾍ辷二ﾉ　　　　　　んlilﾉ./ヾ/ i　/ 　 ﾘ
+　　　　　 r‐--､｀'=,,_　　　　＼V7ﾄ､乂 ,,, ,,,　　 　 　 　弋乂/　/ｨ/,/　,,-ヾ､
+　　　　　 } 　 　 ｀'-,,≫､_　　　 ﾞ'x iヽ　　　　　　　 　'　　　 -=彡夕／ ,／　 ヽ
+　　　　　 i　　　　　　　`'ﾍ､　　　 ﾞ'ﾘ ＼　　　 ､___,　　　　'' ///／　 ／　　　/
+　　　　　 ￣｀'' =-､　　　 　ヽ　 　,ｿ._　 ｀ ､　　　　 　 _,, イ./／　／　　　　/
+ 　　　　 (⌒ヽ二ニ＞､　　　 ∨／ヽ,￣＼　＞七爪_廴r-'ﾌ_,-=´ 　　 　.,く
+　　 　 ＿) ,辷=- ､_ 　　＼　　〉ﾆrー-= ､.＼|／寸二＞､〈　　　　　　／　/ゝ- .､　＿＿
+　　　 (　 ∧ {_＞､ 　｀'-､ツ´~ 寸|　　　　ヽ, ＿,x＜´　　| .〉　　 _- '´　 ,ﾍ　　　　 ヽ ,／|
+　　 　 ヽ∧l///∧ ＼.　 ｀ヽ,　 Ⅵ　　　=-∧ 　)-=　　,ﾉ〈二ﾌ´　　 ／|　}●　　　　 V::/
+　　　　{.∧////∨　　>ｰ,ﾆ彡　 リ　　　　　 〉-'､　　　 }//〉　　_＞'　／　|.　､,_,　● iV
+　　　　∧///l/八　i´ ヽ ＼_)　　 j}　　　 ／ | o ＼　　ﾘ 〈｀￣´_,x<´＿__,{ ｀ヽ､　　 ﾉ.|
+　　　 ∧//二///ヽ,_　_,＞､_＞z,,_入__／　　|. o　.|＼/＼⊂ﾆﾆメ∠｀ヽ,　｀} 　ナ／　|
+                                </pre>
+                        </div>
+                </div>
+        </body>
 </html>
