update ascii art and name

--- a/index.html
+++ b/index.html
@@ -20,40 +20,43 @@
                         </div>
 
                         <p>
-Hello, my name is Eliza and welcome to my website. I'd like a place to play around with web things (although this is a static site ATM) and maybe post photography or a small blog here.
+Hello, my name is ϗ̶̢̨͇̦͔̠̪̜͇́͊̋̔̿́͊̎̄̈́̉̓̾͌̀̑͋́̈́͂̓̏̀̅̔́͛͑̽̆͗̂̈́̈́͆͘͘͝⫲̸̧̧̛̩͕̬̻͚͍̹̱̦͈̹̣͓̻̖̱̲͖̟̟̫̹̹̍̐̎̀̐̈́̏́̍̿͘͠͝ͅօ̶̧̧̛͓̬̮͉͉̖̗̝̟̥͇͍̯͗͐̈́̌͆͌͒̐̈̐̆̒͋̀͊̂͛͆͑͊̃͌̃̽̂̚̚̕͝͝∟̴̨̛̗͎̣̺͙̼̲͍͙͇̳̲̻̻̠̝͕̟͖͔̙͓̪̬̞͂̍͂̄͆̎̔̽͐̑̽̈͛̈́̈̄̽͒̈́̈́̆̈́̀̈́̿̍̐̿͘̕̚̕͠ο̶̢͍̩͚̻̻̲̹̼̰̦͙͈̭͑̒̈̌͗̃̌̀̊̅̈́̍̇̒͋̀̎͆̀̓͗͐̿̀͜͝͝͝ͅ and welcome to my website. I'd like a place to play around with web things (although this is a static site ATM) and maybe post photography or a small blog here.
                         </p>
 
                         <div class="utf8art">
                                 <pre>
-                     _＿＿
-　　　　　　　　　　 /＼二二≧x,,､_　　　　　　　　 　 ＿
-　　　　　　　　　　 |　　寸二二二ﾆ≧x､　 ,-一ー-7　　｀ -､_　　　　　　 ＿＿_,,,
-　　　　　　　　　　 | 　 　 寸ニニニﾌ=ﾏr-|　_jｰｧ　ｊ　 勹　/￣｀ヽ､-=ﾆﾆニニニ|
-　　　　　　　　　　 |　　　　寸ニﾆイ　,　廴ﾄ-～´￣二二ニ-ﾆｚ,_ 　ﾉ寸ﾆ二二二|
-　　　　　　　　　　 | __ヾヽｯ,,∨く___∨'´　　　　, - ﾆー￣＞ヽﾐ､ ｀く,r､ ＼ニニ二|
-　　　　　　　　　　≧z,__ . . ,く￣ ／　　　　／　／　　イ'　　　'　＼　ヽ､ノヘニ二|i
-　　　　　　　　-=爻': : ,, : /___ヽ'　　　　／　／ 　 ／/ 　 　 　 ',ヽ ＼　 ヽｧ ∨ﾆﾉl
-　　　　　　　　　ゞﾐ'",," : L__/　　　　,/　／　　／ /　　／　　　i　',　 ヽ,　∨｀∨ |
-　　　　　　　　　　 冫,,: :/ r/　　　　/　/　　／　/　　/　　　　　}　 i　　 i　 ∨ﾉ≦=-
-　　　　　　　 　 　 彡 /⌒i　 　 　 /　/　　/　 ,/　　/　　　 　 / |　 l 　 │　i勹 ,:.ゞ
-　　　　　 　 　 ＿　|　{　　}　　 　 i　 l 　 /　.,ｲ　／/ 　 　 　 /　|　 }　　 l　 |´ ,,ﾐ:.
-　　　　 　 　 i´　 ｀ヽ,rｰ､/　　 　 i　 l --ーナ|'ﾅｰ/　　　 　 /　 | 　|　　 ﾄ､ |爻ヾ
-　　　　　　　 ヽ 　（⌒ ,メ､ｰ-.、　i　 |　|　 /　l/　/　　　 ﾉ /ー-l,|_ ,!　　 } | |
-　　　　　 　 　 ,＞廴 °r-'　　)　|　 l.l i ,/--ﾉ､ ./　　, ｲ /　 　 i |,ﾊ　 　 i | |
-　 　 　 　 rｰ.iﾞ ｰ- 介ｰバ`-'ﾞ 　 ',　从ｻ芸气z､/ ／ 〃＿,,,,　ﾉ ij ,|　　./ | |
-　　　　　　!　 ｀ー'ﾞ　l 丶.,! . |ﾍ 　 ,∧ zｨ戈::i 　〃 　 　　,ｨﾃﾃ:z､ﾘ/|　 /ノﾘﾉ
-　　　　 　 ゝ- ､　 　 ゝ-' ヽ ﾚム　ヽﾍ辷二ﾉ　　　　　　んlilﾉ./ヾ/ i　/ 　 ﾘ
-　　　　　 r‐--､｀'=,,_　　　　＼V7ﾄ､乂 ,,, ,,,　　 　 　 　弋乂/　/ｨ/,/　,,-ヾ､
-　　　　　 } 　 　 ｀'-,,≫､_　　　 ﾞ'x iヽ　　　　　　　 　'　　　 -=彡夕／ ,／　 ヽ
-　　　　　 i　　　　　　　`'ﾍ､　　　 ﾞ'ﾘ ＼　　　 ､___,　　　　'' ///／　 ／　　　/
-　　　　　 ￣｀'' =-､　　　 　ヽ　 　,ｿ._　 ｀ ､　　　　 　 _,, イ./／　／　　　　/
- 　　　　 (⌒ヽ二ニ＞､　　　 ∨／ヽ,￣＼　＞七爪_廴r-'ﾌ_,-=´ 　　 　.,く
-　　 　 ＿) ,辷=- ､_ 　　＼　　〉ﾆrー-= ､.＼|／寸二＞､〈　　　　　　／　/ゝ- .､　＿＿
-　　　 (　 ∧ {_＞､ 　｀'-､ツ´~ 寸|　　　　ヽ, ＿,x＜´　　| .〉　　 _- '´　 ,ﾍ　　　　 ヽ ,／|
-　　 　 ヽ∧l///∧ ＼.　 ｀ヽ,　 Ⅵ　　　=-∧ 　)-=　　,ﾉ〈二ﾌ´　　 ／|　}●　　　　 V::/
-　　　　{.∧////∨　　>ｰ,ﾆ彡　 リ　　　　　 〉-'､　　　 }//〉　　_＞'　／　|.　､,_,　● iV
-　　　　∧///l/八　i´ ヽ ＼_)　　 j}　　　 ／ | o ＼　　ﾘ 〈｀￣´_,x<´＿__,{ ｀ヽ､　　 ﾉ.|
-　　　 ∧//二///ヽ,_　_,＞､_＞z,,_入__／　　|. o　.|＼/＼⊂ﾆﾆメ∠｀ヽ,　｀} 　ナ／　|
+                                        _　-─ ──-　､
+　　　　　　　　　 　　　　　 　　　　　　´　　　´￣￣￣ヽ ｀
+　　　　　　　　 　　　　　 　　　 ∠_　　　　　　　　　　　　ヽ ｀
+　　　　　　　 　　　　　 　　　 ´　　 ｀　　　　　　　　　　　　＼ ｀ ､
+　　　　　　 　　　　　 　　　/　　　　　　　　ヽ　　　　､　　　　 ヽ　ヽ
+　　　　　 　　　　　 　　　 /　　 /　 /　/　|　|　　､　 ヽ　､　　　 ヽ､', ＿_,
+　　　　　　　　　　　　　　'　　　 !　｜　{　 }　|　 ヽヽ　ﾊ　ヽ　　个ー─'´
+　　　　　　　　　　 　　 /　　　 .{ |　{　ﾊ　ｿ　ﾄ､　ﾊﾉヽ　}　ﾊ　　 ヽ　 ﾊ
+　　　　　　　　　　　　　　　　　｜! ﾊ｜ ヽ　ﾉ ヽｧ＝=ミ､　　',　　} !　　ヽ
+.　　　　　　　　　　 　 ' ｜ i　　 |ﾊﾉ jﾉ　　乂　〃て::ら ｱ　　 }　ﾊ !　　　ヽ
+　　　　　　　　　 　　 {　|　!　　 {,ィち::ﾊ ノ　　　　弋ソ ハ　　|ノ　ﾘ　　　ヽヽ
+.　　　　　　　　　　　　! ﾊ　ヽ　ハゝ弋ｿ　　　　　　　　　　}　ﾉ　　　　　　　ヽ}
+　　　　　　　　　　　　jﾉ__ヽ　＼ゝヽ　　　 ､　　　　　　　　jノ　　　　 /　 ﾊ　}!
+　　　　　　　　　　　r‐<ヽf´｀､ヽヽ ﾍ　　　　_ ＿,　　　　ｲ |　　　　ｲ　 /　}ノ
+　　　　　　　　　／´ヽ /´ ヽ ｀　¨ヽ ｀ ､　　 　　　　 ..イ |　!　　　/ ! ./
+.　　　　　　　　/　´ゝ {_ノヽ　　　　 ヽ　 ≧=- .._..　´＿ノ}　!ﾊ　 .{　jﾉ
+　　　　　　　　{　　}　　/　　ヽ　　　　｀ヽム-=ｲ{|!}´　　　ﾄ､ﾘ }＿_!
+　　　　　　　　|　　!　　ヽ__　 ゝ､　　　　',　　　」⊥!　　　　 ＞'　　＼
+　　　　　　　 ,'　　ﾉ　　　＿Y_,ィ｀ヽ　　　', ／-‐-|!＿_〃´ ／´　　　}
+.　　　　　　　{　　　ィ‐'´　　 /　　 ハ　　 }　〉‐‐〈| 仆/　 /　　　　　 |
+　　　　　　　人__／ {　　　,ｲ　 ／ __}_ ／ヽ':::::::/ |_／　 /　　　　　　|
+　　　　　　/　/　　　|　　/ .} /／´　　　　 ヽ:::/,.イ}ヽ _/ -─'　　　｜
+.　　　　　 {　/　　　∧　/　| ∧　　　　　　 人::::::::::|::/　　　　　　　 ,
+　　　　　　Y　　　 /　.V　./ {::::ヽ_＿　-‐'´　 }::::::::::/　　　　　　　 /
+　　　　　　 |　　／　　 ヽ　　!:::::::ヽ　　　　　　|__:::/　　　　　　　／
+.　　　　　　 V´　　　　　}　 八::::::::::ト､　　　　 ヽヽ　　　　　　／
+.　　　　　　　}/　　　　　|　　 ﾊ:::::::::|　ヽ　　　　 } ﾊ　　　 .／
+　　　　　　　{　　　　　 /　　//:::::::::{　　　　　　 ﾉ　　　 イ
+　　　　　　　 ＼　　　　　／/:::::::::::::＼　　　　　　　 ／:/
+　　　　　　　　　＼_＿／　,:::::::::::::::::::::ﾊ　　　　　／:::::/
+　　　　　　　　　　　　　　/:::::::::::::::::::/::::ヽ_＿_／::::::::/
+　　　　　　　　　　　　　ノ:::::::::::::::::::〃::::::::::::::::::::::::::::〈
                                 </pre>
                         </div>
                 </div>
