--- a/crypto.html
+++ b/crypto.html
@@ -4,6 +4,30 @@
 	</head>
 	<body>
 		<div class="main">
+<div class="asciiArt"><pre>
+._____. ._____. ._______________________. ._____. ._____.
+| ._. | | ._. | | .___________________. | | ._. | | ._. |
+| !_| |_|_|_! | | !___________________! | | !_| |_|_|_! |
+!___| |_______! !_______________________! !___| |_______!
+.___|_|_| |___________________________________|_|_| |___.
+| ._____| |_______________________________________| |_. |
+| !_! | | |                                   | | ! !_! |
+!_____! | |   ____                  _         | | !_____!
+._____. | |  / ___|_ __ _   _ _ __ | |_ ___   | | ._____.
+| ._. | | | | |   | '__| | | | '_ \| __/ _ \  | | | ._. |
+| | | | | | | |___| |  | |_| | |_) | || (_) | | | | | | |
+| !_! | | |  \____|_|   \__, | .__/ \__\___/  | | ! !_! |
+!_____! | |             |___/|_|              | | !_____!
+._____. | |                                   | | ._____.
+| ._. | | |                                   | | | ._. |
+| !_| |_|_|___________________________________| |_|_|_! |
+!___| |_______________________________________| |_______!
+.___|_|_| |___. ._______________________. .___|_|_| |___.
+| ._____| |_. | | .___________________. | | ._____| |_. |
+| !_! | | !_! | | !___________________! | | !_! | | !_! |
+!_____! !_____! !_______________________! !_____! !_____!
+</pre></div>
+			
 			<p>I realize this probably looks pretty ugly at the moment. I decided I'd like to host this on my own site rather than any builders, but that essentially means building the style elements from scratch. I copied what I have over from the rest of my site (which I haven't put too much effort into as of yet). I'll develop the styling here as I find time between other work.</p>
 			
 			<p>I haven't incorporated much from my sources yet, I've been a bit busy but will have more time to work on developing the real meat of the paper in the next few weeks, I'll include my annotated bib here too as I think that has some about each source that I eventually want to work into my page. So far I've effectively written a short description of how basic end to end encryption systems work. My main question for just this section would be: since I am trying to approach peers with this, I was wondering if the level of technicality and detail presented here is approachable, i.e, should I dumb it down a bit, keep it about the same, or include more technical details when editing or writing other sections. I have a direction in mind for the rest of the project, so how I should go in terms of technicality would be a help moving forward.</p>
