--- a/crypto.html
+++ b/crypto.html
@@ -36,6 +36,8 @@
 			
 			<p>I'd like to incorporate embeded elements for this project, perhaps later I could write some sort of interactive activity for readers, but for now one of the simple things to do is embed tweets like this:</p>
 			
-			<blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Dear furry artists,<br><br>If I used a pfp that you created in my collage, I am willing to pay you $5k to mint this pfp on Ethereum as a 1/1 and send to my wallet. You will need to be able to verify that you were in fact the creator of the original to be eligible. Reply if interested.</p>&mdash; VincentVanDough (@Vince_Van_Dough) <a href="https://twitter.com/Vince_Van_Dough/status/1460085031901224967?ref_src=twsrc%5Etfw">November 15, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+			<div class="tweet">
+				<blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Dear furry artists,<br><br>If I used a pfp that you created in my collage, I am willing to pay you $5k to mint this pfp on Ethereum as a 1/1 and send to my wallet. You will need to be able to verify that you were in fact the creator of the original to be eligible. Reply if interested.</p>&mdash; VincentVanDough (@Vince_Van_Dough) <a href="https://twitter.com/Vince_Van_Dough/status/1460085031901224967?ref_src=twsrc%5Etfw">November 15, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+			</div>
 		</div>	
 </html>	
