--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
                         </div>
 
                         <p>
-Hello, my name is ϗ̶̢̨͇̦͔̠̪̜͇́͊̋̔̿́͊̎̄̈́̉̓̾͌̀̑͋́̈́͂̓̏̀̅̔́͛͑̽̆͗̂̈́̈́͆͘͘͝⫲̸̧̧̛̩͕̬̻͚͍̹̱̦͈̹̣͓̻̖̱̲͖̟̟̫̹̹̍̐̎̀̐̈́̏́̍̿͘͠͝ͅօ̶̧̧̛͓̬̮͉͉̖̗̝̟̥͇͍̯͗͐̈́̌͆͌͒̐̈̐̆̒͋̀͊̂͛͆͑͊̃͌̃̽̂̚̚̕͝͝∟̴̨̛̗͎̣̺͙̼̲͍͙͇̳̲̻̻̠̝͕̟͖͔̙͓̪̬̞͂̍͂̄͆̎̔̽͐̑̽̈͛̈́̈̄̽͒̈́̈́̆̈́̀̈́̿̍̐̿͘̕̚̕͠ο̶̢͍̩͚̻̻̲̹̼̰̦͙͈̭͑̒̈̌͗̃̌̀̊̅̈́̍̇̒͋̀̎͆̀̓͗͐̿̀͜͝͝͝ͅ and welcome to my website. I'd like a place to play around with web things (although this is a static site ATM) and maybe post photography or a small blog here.
-                        </p>
+			Hello, my name is eliza and welcome to my website. I don't have anything particularly interesting here just yet, but you can find me on twitter <a href="https://twitter.com/Kholodetss">@Kholodetss</a>, on <a href="https://github.com/Kholodets">GitHib</a>, Fediverse <a href="https://misskey.bubbletea.dev/@kholodets">@kholodets@misskey.bubbletea.dev</a>, and on discord @Kholodets#1111</p>
 
                         <div class="utf8art">
                                 <pre>
